# Devson-Player

./: .gitignore  README.md  build.gradle.kts  build_err.txt  build_ffmpeg_android.sh  errors.txt  gradlew  gradlew.bat  settings.gradle.kts
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/devson/devsonplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_renderer.cpp  audio_renderer.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  master_clock.h  native_player.cpp  video_renderer.cpp  video_renderer.h
app/src/main/java/com/devson/devsonplayer/: DevsonApplication.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/devson/devsonplayer/player/: DecoderSelector.kt  NativePlayer.kt  PlayerController.kt  PlayerPreferencesViewModel.kt  PlayerViewModel.kt  SubtitleManager.kt
app/src/main/java/com/devson/devsonplayer/player/gestures/: GestureController.kt
app/src/main/java/com/devson/devsonplayer/ui/: PlayerControls.kt  PlayerControlsV2.kt  PlayerScreen.kt  ScalingMode.kt  VideoListScreen.kt
app/src/main/java/com/devson/devsonplayer/ui/gestures/: GestureOverlayView.kt
app/src/main/java/com/devson/devsonplayer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/devson/devsonplayer/ui/viewsettings/: ItemComponents.kt  VideoListViewModel.kt  ViewSettings.kt  ViewSettingsSheet.kt
app/src/main/java/com/devson/devsonplayer/utils/: CodecDetector.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/devson/devsonplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
